Bug error and scrollbar remove from firefox
could not find out why sometimes comment dose not load. Have added an error code when comments does not load.

--- a/css/index.css
+++ b/css/index.css
@@ -33,8 +33,8 @@ header .fa-paw {
     color: black;
 }
 .blogContainer p {
- margin-bottom: 0px;
- margin-top: 5px;
+    margin-bottom: 0px;
+    margin-top: 5px;
 }
 .blogContainer h3 {
     padding-bottom: 10px;
@@ -49,10 +49,11 @@ header .fa-paw {
     gap: 20px;
     overflow: scroll;
     scroll-behavior: smooth;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 } 
 .latest_post::-webkit-scrollbar { 
-    width: 0;
-    height: 0;
+    display: none;
 }
 .slide-arrow {
     color: black;
